# contracts/api/product/openapi.yaml
@@ -31,10 +31,6 @@ paths:
     $ref: './identity-workspace-paths.yaml#/paths/~1api~1control~1projects~1{projectId}~1application-access'
   /api/control/projects/{projectId}/application-access/{entryKind}/{entryId}:
     $ref: './identity-workspace-paths.yaml#/paths/~1api~1control~1projects~1{projectId}~1application-access~1{entryKind}~1{entryId}'
-  /api/control/workspaces/{workspaceId}/projects:
-    $ref: './project-paths.yaml#/paths/~1api~1control~1workspaces~1{workspaceId}~1projects'
-  /api/control/projects/{projectId}:
-    $ref: './project-paths.yaml#/paths/~1api~1control~1projects~1{projectId}'
   /api/control/projects/{projectId}/source/tree:
     $ref: './builder-paths.yaml#/paths/~1api~1control~1projects~1{projectId}~1source~1tree'
   /api/control/projects/{projectId}/source/file:
